--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
 	<!-- [ External Link ] -->
 	<link href='gaya.css' rel='stylesheet'/>
 <link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css' rel='stylesheet'/>
-<link href="https://fonts.googleapis.com/css?family=Playfair+Display:300,400,700,900" rel="stylesheet">
-<link href='http://fonts.googleapis.com/css?family=Niconne&amp;subset=latin,latin-ext' rel=stylesheet type='text/css'>
-<link href='https://fonts.googleapis.com/css?family=Open+Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'/>
+<link href="https://fonts.googleapis.com/css?family=Great+Vibes" rel="stylesheet"/>
+<link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700" rel="stylesheet"/> 
 
   </head>
 
@@ -18,7 +17,7 @@
 
 <div class='atas'>
 <div class='isi'>
-    <h1>Adi & Zhie</h1>
+    <h1>Ansori & Zhie</h1>
 	<h2 class='amp'>are getting married!</h2>
 </div>
 </div>
@@ -29,52 +28,40 @@
 </div>
 </div>
 
-<div class='tengah'>
-
+<div class='mempelai laki'>
 <div class='isi'>
-<div class='kiri'>
-<p class='mempelai laki'>
-<img src="adi.png">
-</p>
-<p class='data'>
-<h2>Adhi</h2>
-Kehadiran adalah silaturahmi, restu adalah do'a kasih sayang. Keiklasan adalah ketulusan hati, maka tiada yang dapat membuat kami bahagia selain kehadiran yang diiringi do'a restu dan keiklasan dalam memberikan cinta kasih kepada kedua mempelai 
-</p>
-</div>
-
-<div class='kanan'>
-<p class='mempelai wanita'>
-<img src="zhie.png">
-</p>
-<p class='data'>
-<h2>Fauziah</h2>
-Kehadiran adalah silaturahmi, restu adalah do'a kasih sayang. Keiklasan adalah ketulusan hati, maka tiada yang dapat membuat kami bahagia selain kehadiran yang diiringi do'a restu dan keiklasan dalam memberikan cinta kasih kepada kedua mempelai 
-</p>
+<div class='data-laki'>
+<!-- <img src="img/adi.png"> -->
+<h2 class='nama' >Adi Saputo</h2>
+<p>Kehadiran adalah silaturahmi, restu adalah do'a kasih sayang. Keiklasan adalah ketulusan hati, maka tiada yang dapat membuat kami bahagia selain kehadiran yang diiringi do'a restu dan keiklasan dalam memberikan cinta kasih kepada kedua mempelai </p>
+<p class="garis"/>
 </div>
 </div> 
+<div style='clear: both;'></div>
+<div class='mempelai wanita'>
+<div class='isi'>
+<div class='data-wanita'>
+<!-- <img src="img/zhie.png"> -->
+<h2 class='nama' >Fauziah Rukmana Sari</h2>
+<p>Kehadiran adalah silaturahmi, restu adalah do'a kasih sayang. Keiklasan adalah ketulusan hati, maka tiada yang dapat membuat kami bahagia selain kehadiran yang diiringi do'a restu dan keiklasan dalam memberikan cinta kasih kepada kedua mempelai </p>
+<p class="garis"/>
+</div>
+</div>
 </div>
 
 <div class='arrum'>
 <div class='isi'>
 " Dan di antara tanda-tanda kekuasaan-Nya diciptakan-Nya untukmu pasangan hidup dari jenismu sendiri supaya kamu dapat ketenangan hati dan dijadikannya kasih sayang di antara kamu. Sesungguhnya yang demikian menjadi tanda-tanda kebesaran-Nya bagi orang-orang yang berpikir. "
-<p>- Q.S. Ar-Rum: 21 -</p>
+<p><b>Q.S. Ar-Rum: 21 </b></p>
 </div>
 </div>
 
 <div class='bawah'>
 <div class='isi'>
-<div class='kiri'>
-<h4 class='amp'>Ceremony</h4>
-<p>Minggu, 08 Oktober 2017</p>
-<p>Pukul : 08.00 WIB s/d 10.00 WIB</p>
-<p>Jl. H. Tabri Rt.01/03 Desa. Cirarab Kec. Legok Kab. Tangerang</p>
-</div>
-<div class='kanan'>
-<h4 class='amp'>Reception</h4>
-<p>Minggu, 08 Oktober 2017</p>
-<p>Pukul : 11.00 WIB s/d Selesai</p>
-<p>Jl. H. Tabri Rt.01/03 Desa. Cirarab Kec. Legok Kab. Tangerang</p>
-</div>
+<h4 class='nama'>Acara Resepsi</h4>
+<p>Minggu, 08 Oktober 2017<br/>
+Pukul : 11.00 WIB s/d Selesai<br/>
+Jl. H. Tabri Rt.01/03 Desa. Cirarab Kec. Legok Kab. Tangerang</p>
 </div>
 </div>
 
@@ -83,7 +70,7 @@ Kehadiran adalah silaturahmi, restu adalah do'a kasih sayang. Keiklasan adalah k
 </div>
 </div>
 
-<audio src="A-Thousand-Years.mp3" autoplay="autoplay"></audio>
+<audio src="A-Thousand-Years.mp3z" autoplay="autoplay"></audio>
 <div class='footer'>
 Copyright 2017. All Rights Reserved. Design by <a href="https://fianhar.blogspot.com/" rel="nofollow">fianhar</a>
 </div>
