--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
 	<meta content='width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1' name='viewport'/>
 	<!-- [ External Link ] -->
-	<link href='gaya.css' rel='stylesheet'/>
+	<link href='css/gaya.css' rel='stylesheet'/>
 <link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css' rel='stylesheet'/>
 <link href="https://fonts.googleapis.com/css?family=Great+Vibes" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700" rel="stylesheet"/> 
