--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ Jl. H. Tabri Rt.01/03 Desa. Cirarab Kec. Legok Kab. Tangerang</p>
 </div>
 </div>
 
-<audio src="A-Thousand-Years.mp3z" autoplay="autoplay"></audio>
+<audio src="A-Thousand-Years.mp3" autoplay="autoplay"></audio>
 <div class='footer'>
 Copyright 2017. All Rights Reserved. Design by <a href="https://fianhar.blogspot.com/" rel="nofollow">fianhar</a>
 </div>
