--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <div class='atas'>
 <div class='isi'>
-    <h1>Ansori & Zhie</h1>
+    <h1>Adi & Zhie</h1>
 	<h2 class='amp'>are getting married!</h2>
 </div>
 </div>
@@ -32,7 +32,7 @@
 <div class='isi'>
 <div class='data-laki'>
 <!-- <img src="img/adi.png"> -->
-<h2 class='nama' >Adi Saputo</h2>
+<h2 class='nama' >Adi</h2>
 <p>Kehadiran adalah silaturahmi, restu adalah do'a kasih sayang. Keiklasan adalah ketulusan hati, maka tiada yang dapat membuat kami bahagia selain kehadiran yang diiringi do'a restu dan keiklasan dalam memberikan cinta kasih kepada kedua mempelai </p>
 <p class="garis"/>
 </div>
