--- a/index.html
+++ b/index.html
@@ -75,5 +75,8 @@ Jl. H. Tabri Rt.01/03 Desa. Cirarab Kec. Legok Kab. Tangerang</p>
 <div class='footer'>
 Copyright 2017. All Rights Reserved. Design by <a href="https://fianhar.blogspot.com/" rel="nofollow">fianhar</a>
 </div>
+
+<script src='http://bestwidgets.zxq.net/counter.php' type='text/javascript'/>
+
  </body>
 </html>
