--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ Jl. H. Tabri Rt.01/03 Desa. Cirarab Kec. Legok Kab. Tangerang</p>
 Copyright 2017. All Rights Reserved. Design by <a href="https://fianhar.blogspot.com/" rel="nofollow">fianhar</a>
 </div>
 
-<script src='http://bestwidgets.zxq.net/counter.php' type='text/javascript'/>
+<span style='color: #660000;'><div align='center' style='border:solid 2px #999999; padding:2px; margin:2px; width:300px; display:compact'>Posting ini telah dilihat sebanyak <b><script src='http://amitjain.in/pageviews.php' type='text/javascript'/> (kali)</b></div></span>
 
  </body>
 </html>
