--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
 	<!-- [ External Link ] -->
 	<link href='css/gaya.css' rel='stylesheet'/>
 <link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css' rel='stylesheet'/>
-<link href="https://fonts.googleapis.com/css?family=Great+Vibes" rel="stylesheet"/>
-<link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700" rel="stylesheet"/>
-<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet"/> 
+<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet"/>
+<link href="https://fonts.googleapis.com/css?family=Oswald:300,500,700" rel="stylesheet"/>
 
   </head>
 
